[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "pdf-stegano-forensic"
version = "1.0.0"
authors = [
  { name="Your Name", email="your.email@example.com" },
]
description = "A macOS-optimized forensic steganography tool for PDF carriers."
readme = "README.md"
requires-python = ">=3.8"
license = {text = "MIT"}
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: MacOS :: MacOS X",
]

[project.scripts]
pdf-hide = "pdf_run:main"
pdf-restore = "pdf_hide:main"